<resources>
    <string name="app_name">FlickrRocket</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_add">Add</string>
    <string name="bottom_favorites">Favorites</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="list_view_error">An Error Occurred While Loading Data</string>
    <string name="images_from_flickr">Images From Flickr</string>
    <string name="suggestion_button_placeholder">Suggestion</string>
    <string name="title_text_placeholder">This is where the title text will go</string>
    <string name="search_label">Search</string>
    <string name="flickr">flickr</string>
    <string name="rocket">ROCKET</string>
    <string name="main_imageview_description">Displays Photos From Flickr</string>
    <string name="photo_comments">Photo comments go here</string>
    <string name="title_activity_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    
    <string-array name="suggestions">
        <item>Recent</item>
        <item>Travel</item>
        <item>Decor</item>
        <item>Food</item>
        <item>Architecture</item>
        <item>Art</item>
        <item>Nature</item>
        <item>Style</item>
        <item>Music</item>
        <item>Movies</item>
        <item>Beauty</item>
    </string-array>

</resources>
